--- a/index.css
+++ b/index.css
@@ -129,6 +129,10 @@ section.word > span {
   content-visibility: hidden;
 }
 
+section.word > span.gameOver {
+  background-color: #EC5D49;
+}
+
 section.word > span.revealed {
   content-visibility: visible;
 
@@ -177,4 +181,16 @@ section.keyboard > button.wrong {
 
 section.keyboard > button.correct {
   background-color: #10A95B;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
